--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<html>
+    <head>
+    </head>
+
+    <body>
+        <script> alert("Hello javascript");</script>
+    </body>
+</html>
